Fix spacing between items in dialog

--- a/client/blocks/site-address-changer/style.scss
+++ b/client/blocks/site-address-changer/style.scss
@@ -131,6 +131,8 @@
 }
 
 .site-address-changer__confirmation-detail {
+	margin-bottom: 1em;
+
 	.gridicon {
 		float: left;
 		margin-top: 4px;
